try to fix alignment and center contact buttons

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     --glass-border: rgba(255, 255, 255, 0.1);
 }
 
+h2 {
+    text-align: center;
+}
+
 /* --- 2. GLOBAL STYLES --- */
 body {
     background-color: var(--bg-dark) !important;
@@ -193,7 +197,7 @@ article.project-card {
     padding: 12px 30px !important;
 }
 
-.contact-button {
+#contact-button {
     display: flex;
     background-color: var(--accent-bright) !important;
     border: none !important;
